# goo

./: .gitignore  AsmBuilder.cpp  AsmBuilder.h  Assembler.cpp  Assembler.h  AstPrinter.h  CMakeLists.txt  Interpreter.h  LICENSE  Parser.cpp  README.md  Scanner.h  Stmt.h  Token.cpp  Token.h  main.cpp  notes.txt
examples/: c-tree.bf
src/: AsmBuilder.cpp  AsmBuilder.h  Assembler.cpp  Assembler.h  AstPrinter.cpp  AstPrinter.h  CMakeLists.txt  CodeGen.cpp  CodeGen.h  Input.cpp  Input.h  Interpreter.cpp  Interpreter.h  Optimizer.cpp  Optimizer.h  Output.cpp  Output.h  Parser.cpp  Parser.h  Payload.h  Pipeline.cpp  Pipeline.h  Reporter.cpp  Reporter.h  Scanner.cpp  Scanner.h  Stmt.cpp  Stmt.h  Token.cpp  Token.h  Util.cpp  Util.h  main.cpp
tests/: AssemblerEmulator.cpp  AssemblerEmulator.h  AssemblerEmulator_TestCase.cpp  CMakeLists.txt  OptimizedStmts_TestCase.cpp  Optimized_Interpreter_TestCase.cpp  Optimizer_TestCase.cpp  Parser_TestCase.cpp  Scanner_TestCase.cpp
